[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Felipe 'Bidu' Rodrigues <felipe@felipevr.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.5"
sqlalchemy = "^1.3"
fastapi = {version = "^0.54.1", extras = ["all"]}

[tool.poetry.dev-dependencies]
pytest = {version = "^5.3", allows-prereleases = true}
pre-commit = {version = "^2.0", allows-prereleases = true}
black = {version = "^18.3-alpha.0", allows-prereleases = true}
ipython = "^7.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
